<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/action_settings"
    android:orderInCategory="100"
    android:title="@string/action_settings"
    app:showAsAction="never" />
<item
    android:id="@+id/action_Fav"
    android:icon="@drawable/ic_favorite_black_24dp"
    android:orderInCategory="100"
    android:title="@string/action_Fav"
    app:showAsAction="always" />
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/refresh"
        app:showAsAction="always"/>


    <item
        android:id="@+id/logoutadmin"
        android:title="@string/Logout"
        app:showAsAction="never"/>




</menu>
