<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/search_action"
        android:contentDescription="@string/content_description_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:queryHint="Search Here Book"
        app:showAsAction="always" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mor"
        android:title="@string/more"
        app:showAsAction="never" />
    <item
        android:id="@+id/moreetc"
        android:title="@string/more"
        app:showAsAction="never" />

</menu>