<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2DB6C3"
    android:padding="10dp"
    tools:context=".Registration">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
      android:layout_height="wrap_content"
        android:orientation="vertical"
       >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textColor="#BC1515"
            android:textSize="30sp"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/user_type"
                android:textSize="21sp" />
            <Spinner
                android:id="@+id/type"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:id="@+id/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/btground"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:hint="@string/FullName"
                    android:inputType="textPersonName"
                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout >

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:id="@+id/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/btground"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:autofillHints="@string/email"
                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:id="@+id/uphone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/btground"
                    android:drawableStart="@drawable/ic_local_phone_black_24dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:ems="10"
                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout >
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:id="@+id/editEnrollNo">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/btground"
                android:drawableStart="@drawable/ic_card_black_24dp"
                android:hint="@string/enrollno"
                android:inputType="textPersonName"
                android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout >
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:id="@+id/cardno">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/btground"
                android:drawableStart="@drawable/ic_card_black_24dp"
                android:hint="@string/cardno"
                android:inputType="numberSigned"
                android:textAlignment="center" />
        </com.google.android.material.textfield.TextInputLayout >
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:id="@+id/password"
                android:inputType="number">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/btground"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout >
        </LinearLayout>

    </LinearLayout>
        <LinearLayout
            android:id="@+id/down"
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/i_agree_that_the_information_provided_is_correct" />
            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/shapelogin"
                android:text="@string/submit" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="40sp">
                <TextView
                    android:id="@+id/txtlogp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/if_your_already_account"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/txtlog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_here"
                    android:layout_marginStart="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/md_blue_700"
                    android:textSize="20sp" />
            </LinearLayout>




        </LinearLayout>

    </LinearLayout>
</ScrollView>
</RelativeLayout>