<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2DB6C3"
    android:padding="10dp"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-55dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/WelcomeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/welcome"
                    android:textAlignment="center"
                    android:textColor="#FF5722"
                    android:textColorHighlight="#EF6D02"
                    android:textSize="30dp"
                    android:textStyle="normal|bold"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:id="@+id/logintext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/logintext"
                    android:textAlignment="center"
                    android:textColor="#FF5722"
                    android:textColorHighlight="#EF6D02"
                    android:textSize="30dp"
                    android:textStyle="normal|bold"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:layout_marginTop="65dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:autofillHints="@string/email"
                            android:background="@drawable/btground"
                            android:drawableStart="@drawable/ic_email_black_24dp"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textAlignment="center" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:inputType="number">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:background="@drawable/btground"
                            android:drawableLeft="@drawable/ic_lock_black_24dp"
                            android:hint="@string/Password"
                            android:inputType="textPassword"
                            android:textAlignment="center" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/loginLog"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/shapelogin"
                        android:text="Login" />

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="80dp"
                        android:gravity="center"
                        android:text="@string/remember_me"
                        android:textAlignment="gravity"
                        android:textColor="#000000"
                        android:textSize="24sp" />


                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/newusera"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="If You Dont Have Account!"
                        android:textAlignment="center"
                        android:textColor="@color/md_black_1000"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/newuser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:text="Click Here"
                        android:textAlignment="center"
                        android:textColor="@color/md_blue_700"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>


                <TextView
                    android:id="@+id/forgetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="ForgetPassword?"
                    android:textAlignment="gravity"
                    android:textColor="#000000"
                    android:textSize="22sp"
                    android:textStyle="bold" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
