<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profilescren"
    android:orientation="vertical"
    tools:context=".ui.UserProfile.UserProfileFragment">

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarstud"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="YOUR PROFILE"
                android:textAlignment="center"
                android:textColor="@color/md_lime_300"
                android:textSize="25sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/Emailverifytxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:text="Email Not Verify!"
                android:textAlignment="center"
                android:textSize="20dp"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="@drawable/cardviewsolid"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/uploadimage"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    tools:src="@mipmap/ic_launcher_image" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/card"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:background="#1E88E5"
                android:src="@drawable/ic_person_black_24dp" />

            <EditText
                android:id="@+id/uname"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/fullname"
                android:textColor="@color/md_red_A700"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="30sp" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:background="#1E88E5"
                android:src="@drawable/ic_email_black_24dp" />

            <EditText
                android:id="@+id/uemail"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/email"
                android:textColor="@color/md_red_A700"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="30sp" />




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
          >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:background="#1E88E5"
                android:src="@drawable/ic_local_phone_black_24dp" />

            <EditText
                android:id="@+id/uphone"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/phone_number"
                android:textColor="@color/md_red_A700"
                android:inputType="textPersonName"
                android:textSize="30sp" />



        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/info"

        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/UCimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/shapelogin"
            android:text="UploadImage"
            android:textSize="20dp" />

        <Button
            android:id="@+id/Resetpassword"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/md_teal_700"
            android:text="ResetPassword"
            android:textSize="20dp" />

        <Button
            android:id="@+id/Verifyemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="Button"
            android:textSize="10dp"
            android:visibility="invisible" />


    </LinearLayout>

    <include
        android:id="@+id/toolbarstud"
        layout="@layout/toolbar">

    </include>
</RelativeLayout>